# WayToCrazy

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindLibdrm.cmake
src/: CMakeLists.txt  main.c
